--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,7 @@ fabric.properties
 #####
 
 .DS_Store
+/project/imgs
+.idea/runConfigurations/LLMClinet.xml
+.idea/runConfigurations/LLMClinet.xml
+/.idea/runConfigurations
