--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,5 @@ fabric.properties
 .idea/runConfigurations/LLMClinet.xml
 .idea/runConfigurations/LLMClinet.xml
 /.idea/runConfigurations
+/project/imgs_1
+project/game_analysis.png
