--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,162 @@
+absl-py==2.3.1
 aiohttp==3.8.6
 aiosignal==1.3.1
-annotated-types==0.5.0
+ale-py==0.10.1
+annotated-types==0.7.0
+anthropic==0.58.2
 anyio==3.7.1
+asttokens==3.0.0
+astunparse==1.6.3
 async-timeout==4.0.3
 asynctest==0.13.0
 attrs==24.2.0
+backcall==0.2.0
 cached-property==1.5.2
+cachetools==5.5.2
 certifi==2022.12.7
 charset-normalizer==3.4.1
 click==8.1.8
 cloudpickle==2.2.1
 colorama==0.4.6
+comm==0.2.2
+contourpy==1.1.1
 cycler==0.11.0
+debugpy==1.8.13
+decorator==5.2.1
 distro==1.9.0
+dotenv==0.9.9
 exceptiongroup==1.2.2
+executing==2.2.0
+Farama-Notifications==0.0.4
+filelock==3.16.1
 Flask==2.2.5
+flatbuffers==25.2.10
 fonttools==4.38.0
 frozenlist==1.3.3
+fsspec==2025.3.0
+gast==0.4.0
+google-auth==2.40.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.70.0
 gym==0.22.0
-
 gym-notices==0.0.8
+-e git+https://github.com/doveliyuchen/GVGAI_GYM.git@6b5bb2c22a8f6e1ccba9bf22a0bb385f798a9757#egg=gym_gvgai
+gymnasium==1.0.0
 h11==0.14.0
-httpcore==0.17.3
-httpx==0.24.1
+h5py==3.11.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 imageio==2.31.2
 importlib-metadata==6.7.0
+importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.12.3
 itsdangerous==2.1.2
+jedi==0.19.2
 Jinja2==3.1.5
+jiter==0.9.0
+joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keras==2.13.1
 kiwisolver==1.4.5
+libclang==18.1.1
+llvmlite==0.41.1
+Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.5.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.0.5
-numpy==1.21.6
+nest-asyncio==1.6.0
+networkx==3.1
+numba==0.58.1
+numpy==1.24.3
+numpy_groupies==0.9.22
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.9.86
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.3.1
+ollama==0.4.7
 openai==1.39.0
+opencv-python==4.11.0.86
+opt_einsum==3.4.0
 packaging==24.0
+pandas==2.0.3
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
 Pillow==9.5.0
-pydantic==2.5.3
-pydantic_core==2.14.6
+platformdirs==4.3.6
+portkey-ai==1.12.0
+prompt_toolkit==3.0.50
+protobuf==4.25.8
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.10.6
+pydantic_core==2.27.2
 pygame==2.6.1
+Pygments==2.19.1
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-dotenv==0.21.1
+pytz==2025.2
+pyzmq==26.3.0
+regex==2024.11.6
 requests==2.31.0
+requests-oauthlib==2.0.0
+ribs==0.7.1
+rich==14.1.0
+rsa==4.9.1
+scikit-learn==1.3.2
+scipy==1.10.1
+seaborn==0.13.2
+Shimmy==2.0.0
 six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+stable-baselines==2.10.2
+stable_baselines3==2.4.1
+stack-data==0.6.3
 style==1.1.0
+sympy==1.13.3
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow==2.13.1
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tiktoken==0.7.0
+torch==2.4.1
+tornado==6.4.2
 tqdm==4.67.1
-typing_extensions==4.7.1
+traitlets==5.14.3
+triton==3.0.0
+types-requests==2.32.0.20241016
+typing_extensions==4.5.0
+tzdata==2025.2
 update==0.0.1
 urllib3==2.0.7
+wcwidth==0.2.13
 Werkzeug==2.2.3
 wincertstore==0.2
+wrapt==1.17.2
 yarl==1.9.4
 zipp==3.15.0
